.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
13:15:54 **** Incremental Build of configuration Debug for project swn-340 projjj ****
make -j20 all 
arm-none-eabi-gcc "../Core/Src/tests/led_soft_test.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32L476xx -c -I../Core/Inc -I../Drivers/STM32L4xx_HAL_Driver/Inc -I../Drivers/STM32L4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32L4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/tests/led_soft_test.d" -MT"Core/Src/tests/led_soft_test.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/tests/led_soft_test.o"
arm-none-eabi-gcc "../Core/Src/tests/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32L476xx -c -I../Core/Inc -I../Drivers/STM32L4xx_HAL_Driver/Inc -I../Drivers/STM32L4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32L4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/tests/main.d" -MT"Core/Src/tests/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/tests/main.o"
../Core/Src/tests/led_soft_test.c: In function 'software_led':
../Core/Src/tests/led_soft_test.c:17:16: error: 'PIN_NUMBER' undeclared (first use in this function)
   17 |         LED_On(PIN_NUMBER);
      |                ^~~~~~~~~~
../Core/Src/tests/led_soft_test.c:17:16: note: each undeclared identifier is reported only once for each function it appears in
make: *** [Core/Src/tests/subdir.mk:34: Core/Src/tests/led_soft_test.o] Error 1
make: *** Waiting for unfinished jobs....
"make -j20 all" terminated with exit code 2. Build might be incomplete.
